--- a/src/app/page/Route/routecomppage/routecomppage.component.html
+++ b/src/app/page/Route/routecomppage/routecomppage.component.html
@@ -371,7 +371,7 @@
                               <mat-icon> timeline </mat-icon>
                               <span>{{vehicle.issendname}}</span>  
                               <span>{{vehicle.shiftname}}</span>  
-                              <span *ngIf="vehicle.item!=1">({{vehicle.item}})</span>  
+                              <!-- <span *ngIf="vehicle.item!=1">({{vehicle.item}})</span>   -->
                             </div>
                   
                             <div class="icon-inrow" matTooltip="ระยะเวลา (นาที)">
