--- a/src/app/page/Route/routepage/routepage.component.html
+++ b/src/app/page/Route/routepage/routepage.component.html
@@ -38,10 +38,10 @@
             <span>{{ activedata.empinroute.length | number:'1.0-0'}} คน</span>
           </div>
 
-          <div class="icon-inrow" matTooltip="จำนวนจุดรับ-ส่งพนักงาน">
+          <!-- <div class="icon-inrow" matTooltip="จำนวนจุดรับ-ส่งพนักงาน">
             <mat-icon>location_on</mat-icon>
             <span>{{ activedata.listdp.length}} จุด</span> 
-          </div>
+          </div> -->
 
           <div class="icon-inrow" matTooltip="ระยะทาง (กม.)">
             <mat-icon> timeline </mat-icon>
@@ -193,7 +193,7 @@
                     <mat-icon> timeline </mat-icon>
                     <span>{{vehicle.issendname}}</span>  
                     <span>{{vehicle.shiftname}}</span>  
-                    <span *ngIf="vehicle.item!=1">({{vehicle.item}})</span>  
+                    <!-- <span *ngIf="vehicle.item!=1">({{vehicle.item}})</span>   -->
                   </div>
         
                   <div class="icon-inrow" matTooltip="ระยะเวลา (นาที)">
