--- a/src/app/page/Route/routevehiclepage/routevehiclepage.component.html
+++ b/src/app/page/Route/routevehiclepage/routevehiclepage.component.html
@@ -37,10 +37,10 @@
                 <span>{{ activeroute.empinroute.length | number:'1.0-0'}} คน</span>
               </div>
 
-              <div class="icon-inrow" matTooltip="จำนวนจุดรับ-ส่งพนักงาน">
+              <!-- <div class="icon-inrow" matTooltip="จำนวนจุดรับ-ส่งพนักงาน">
                 <mat-icon>location_on</mat-icon>
                 <span>{{ activeroute.listdp.length}} จุด</span> 
-              </div>
+              </div> -->
 
               <div class="icon-inrow" matTooltip="ระยะทาง (กม.)">
                 <mat-icon> timeline </mat-icon>
