--- a/src/app/page/User/userdatapage/userdatapage.component.html
+++ b/src/app/page/User/userdatapage/userdatapage.component.html
@@ -50,9 +50,9 @@
           <mat-icon> admin_panel_settings </mat-icon>
           <span>:  {{ activeuser.rolename }} : {{activeuser.phone}} </span>
         </div>
-        <div class="icon-inrow" matTooltip="แผนก และ บริษัทที่สังกัด">
+        <div class="icon-inrow" matTooltip="บริษัทที่สังกัด">
           <mat-icon> home </mat-icon>
-          <span>{{activeuser.companyname}} ({{activeuser.department}})</span>
+          <span>{{activeuser.companyname}}</span>
         </div>
         <div class="icon-inrow" matTooltip="Line name">
           <mat-icon> account_circle </mat-icon>
