--- a/src/app/page/Vehicle/vehiclecomppage/vehiclecomppage.component.html
+++ b/src/app/page/Vehicle/vehiclecomppage/vehiclecomppage.component.html
@@ -161,7 +161,7 @@
                         {{route.endtime}}
                     </div>
                     <div class="col" style="display:flexbox; text-align: start;">
-                        {{route.item}}
+                        {{route.drivername}}
                     </div>
                     <div class="col" style="display:flexbox; text-align: start;">
                         {{route.routename}}
