--- a/src/app/page/User/usercompage/usercompage.component.html
+++ b/src/app/page/User/usercompage/usercompage.component.html
@@ -33,11 +33,11 @@
                 <mat-card-subtitle>{{ user.rolename }} : {{user.phone}} </mat-card-subtitle>
               </mat-card-header>
               <mat-card-content>
-                <div class="icon-inrow" matTooltip="ชื่อรถ">
+                <div class="icon-inrow" matTooltip="บริษัทที่สังกัด">
                     <mat-icon> home </mat-icon>
-                    <span>{{user.companyname}} ({{user.department}})</span>
+                    <span>{{user.companyname}} </span>
                 </div>
-                <div class="icon-inrow" matTooltip="ชื่อรถ">
+                <div class="icon-inrow" matTooltip="ชื่อในไลน์">
                     <mat-icon> account_circle </mat-icon>
                     <span>: {{user.linename}}</span>
                 </div>
