--- a/src/app/page/Employee/employeecomppage/employeecomppage.component.html
+++ b/src/app/page/Employee/employeecomppage/employeecomppage.component.html
@@ -1,128 +1,130 @@
-<!-- spinner -->
-<div class="container-spiner" *ngIf="show.Spinner">
-    <div class="row">
-        Please Watting...
+<div class="position-relative" style="height: 100%; width:100%; overflow:hidden">
+    <!-- spinner -->
+    <div class="container-spiner" *ngIf="show.Spinner">
+        <div class="row">
+            Please Watting...
+        </div>
+        <mat-spinner></mat-spinner>
     </div>
-    <mat-spinner></mat-spinner>
+    <!-- Body -->
+    <div class="row" style=" display: flex; width: 100vw; height: 95vh; overflow: hidden;" >
+        <!-- Sub menu & tools bar -->
+        <div class="container" style="display: flex; justify-content: space-between;align-items: start; 
+                    width:100%; margin: 5px; padding:5px; background-color:'#FFE5B4' ;">
+                <div class="col" style="flex: 0 0 auto;">
+                </div>
+                <div class="col" style="flex: 0 0 auto; text-align: right; margin-right:20px ;background-color: aquamarine;">
+                    <div class="row" >
+                        <div class="col" style="display: flex; align-items: center;"
+                            [style.background-color]="show.type==0?'#FFE5B4':'#00FFFFFF'"
+                            mat-raised-button matTooltip="แสดงภาพรวม" (click)="show.type=0" >
+                            <mat-icon style="width: 100%; color: blue;">dashboard</mat-icon>
+                        </div>
+                        <div class="col" style="display: flex; align-items: center;"
+                            [style.background-color]="show.type==1?'#FFE5B4':'#00FFFFFF'"
+                            mat-raised-button matTooltip="แสดงตามกลุ่ม" (click)="show.type=1">
+                            <mat-icon style="width: 100%; color: blue;">dns</mat-icon>
+                        </div>
+                        <div class="col" style="display: flex; align-items: center;"
+                            [style.background-color]="show.type==2?'#FFE5B4':'#00FFFFFF'"
+                            mat-raised-button matTooltip="แสดงรายพนักงาน" (click)="show.type=2">
+                            <mat-icon style="width: 100%; color: blue;">list</mat-icon>
+                        </div>
+                    </div>   
+                </div>
+        </div>
+
+        <!-- BODY-->
+        <div class="container" style=" max-height: 90vh; width:100%; margin: 5px; padding:5px;">
+                <!--User Card -->
+                <div class="row no-gutter" *ngIf="show.type==0">
+                    <div class="col-3" *ngFor="let employee of listuser">
+                      <mat-card class="employee-card">
+                        <mat-card-header style="background-color: lightseagreen;">
+                          <div mat-card-avatar class="employee-image">
+                            <img [src]="employee.lineimg ==''? va.icon.user : employee.lineimg">
+                          </div>
+                          <div class="title-container">
+                            <mat-card-title>{{ employee.rolename }}</mat-card-title>
+                            <mat-card-subtitle>{{ employee.empcode }}</mat-card-subtitle>
+                          </div>
+                        </mat-card-header>
+                  
+                        <mat-card-content style="margin-top: 20px;">
+                          <p><mat-icon>account</mat-icon> {{ employee.empname }}</p>
+                          <p><mat-icon>phone</mat-icon> {{ employee.phone }}</p>
+                          <p><mat-icon>home</mat-icon> {{ employee.companyname }}</p>
+                          <p><mat-icon>note</mat-icon> {{ employee.remark }}</p>
+                        </mat-card-content>
+                      </mat-card>
+                    </div>
+                </div>
+                <div *ngIf="show.type==2">
+                    <div *ngFor="let employee of listuser">
+                        <div class="row" *ngIf="show.type==2">
+                            <div class="col-2"><img [src]="employee.lineimg ==''? va.icon.user : employee.lineimg"> </div>                       </div>
+                            <div class="col-2"> {{ employee.empname }} </div>
+                            <div class="col-2"> {{ employee.rolename }} </div>
+                            <div class="col-2"> {{ employee.empcode }} </div>
+                            <div class="col-2"> {{ employee.phone }} </div>
+                            <div class="col-2"> {{ employee.companyname }} </div>
+                        </div>
+                    </div>
+                </div>
+                <div *ngIf="show.type==1">
+                    <table mat-table [dataSource]="listuser" *ngIf="show.type == 1">
+                        <!-- Image Column -->
+                        <ng-container matColumnDef="image">
+                          <th mat-header-cell *matHeaderCellDef> Image </th>
+                          <td mat-cell *matCellDef="let employee">
+                            <img [src]="employee.lineimg == '' ? va.icon.user : employee.lineimg" alt="Employee Image" class="employee-img">
+                          </td>
+                        </ng-container>
+                      
+                        <!-- Employee Name Column -->
+                        <ng-container matColumnDef="empname">
+                          <th mat-header-cell *matHeaderCellDef> Employee Name </th>
+                          <td mat-cell *matCellDef="let employee"> {{ employee.empname }} </td>
+                        </ng-container>
+                      
+                        <!-- Role Name Column -->
+                        <ng-container matColumnDef="rolename">
+                          <th mat-header-cell *matHeaderCellDef> Role Name </th>
+                          <td mat-cell *matCellDef="let employee"> {{ employee.rolename }} </td>
+                        </ng-container>
+                      
+                        <!-- Employee Code Column -->
+                        <ng-container matColumnDef="empcode">
+                          <th mat-header-cell *matHeaderCellDef> Employee Code </th>
+                          <td mat-cell *matCellDef="let employee"> {{ employee.empcode }} </td>
+                        </ng-container>
+                      
+                        <!-- Phone Column -->
+                        <ng-container matColumnDef="phone">
+                          <th mat-header-cell *matHeaderCellDef> Phone </th>
+                          <td mat-cell *matCellDef="let employee"> {{ employee.phone }} </td>
+                        </ng-container>
+                      
+                        <!-- Company Name Column -->
+                        <ng-container matColumnDef="companyname">
+                          <th mat-header-cell *matHeaderCellDef> Company Name </th>
+                          <td mat-cell *matCellDef="let employee"> {{ employee.companyname }} </td>
+                        </ng-container>
+                      
+                        <!-- Header and Row Definitions -->
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                      </table>
+                      
+                </div>
+
+        <!-- Footer -->
+        <div class="container" style="display: flex; justify-content: space-between; align-items: center; width:100%; margin-top: 15px;">
+            
+        </div>
+    </div>
+
+
 </div>
 
-<div class="position-relative" style="height: 100%; width:100%;">
 
-    <div>
-        <div class="container"
-            style="display: flex; justify-content: space-between; align-items: center; width:100hw; margin: 5px;">
-            <div class="col" style="flex: 0 0 auto;">
-
-            </div>
-            <div class="col" style="flex: 0 0 auto; text-align: right;">
-                <div class="row">
-                    <div class="col" style="display: flex; align-items: center;"
-                        [style.background-color]="show.viewtype==0?'#FFE5B4':'#FFFFFF'" mat-raised-button
-                        matTooltip="แสดงภาพรวมพนักงานขับรถ" (click)="show.viewtype=0">
-                        <mat-icon style="width: 100%; color: blue;">dashboard</mat-icon>
-                    </div>
-                    <div class="col" style="display: flex; align-items: center;"
-                        [style.background-color]="show.viewtype==1?'#FFE5B4':'#FFFFFF'" mat-raised-button
-                        matTooltip="แสดงตามกลุ่มสถานะ" (click)="show.viewtype=1">
-                        <mat-icon style="width: 100%; color: blue;">dns</mat-icon>
-                    </div>
-                    <div class="col" style="display: flex; align-items: center;"
-                        [style.background-color]="show.viewtype==2?'#FFE5B4':'#FFFFFF'" mat-raised-button
-                        matTooltip="แสดงรายพนักงานขับรถ" (click)="show.viewtype=2">
-                        <mat-icon style="width: 100%; color: blue;">list</mat-icon>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div style="height:70vh; width:100%; margin: 5px;">
-            <div *ngFor="let item of maindata">
-                <div class="row">
-                    <div class="container"
-                        style="display: flex; justify-content: space-between; align-items: start; width:100hw; margin: 5px;">
-                        <div class="col-auto" style="flex: 0 0 auto; text-align: start;">
-                            <img class="profileimg" [src]="item.lineimg==''?va.icon.user:item.lineimg"/>
-                        </div>
-                        <div class="col-1" style="flex: 0 0 auto; text-align: start;">
-                            {{item.empname}}
-                        </div>
-                        <div class="col-1 ms-4" style="display:flexbox; text-align: start;">
-                            {{item.department}}
-                        </div>
-                        <div class="col-1" style="flex: 0 0 auto; text-align: start;">
-                            {{item.dpname}}
-                        </div>
-                        <div class="col-1" style="flex: 0 0 auto;">
-                            {{item.officename}}
-                        </div>
-                        <div class="col-1" style="flex: 0 0 auto;">
-                            {{item.otname}}
-                        </div>
-                        <div class="col-1" style="flex: 0 0 auto;">
-                            {{item.phone}}
-                        </div>
-                        <div class="col-1" style="flex: 0 0 auto;">
-                            {{item.rolename}}
-                        </div>
-
-                        <div *ngIf="0" class="col" style="flex: 0 0 auto; text-align: right;">
-                            <div class="row">
-                                <div class="col" style="display: flex; align-items: center;"
-                                    [style.background-color]="show.viewtype==0?'#FFE5B4':'#FFFFFF'" mat-raised-button
-                                    matTooltip="แสดงภาพรวมพนักงานขับรถ" (click)="show.viewtype=0">
-                                    <mat-icon style="width: 100%; color: blue;">dashboard</mat-icon>
-                                </div>
-                                <div class="col" style="display: flex; align-items: center;"
-                                    [style.background-color]="show.viewtype==1?'#FFE5B4':'#FFFFFF'" mat-raised-button
-                                    matTooltip="แสดงตามกลุ่มสถานะ" (click)="show.viewtype=1">
-                                    <mat-icon style="width: 100%; color: blue;">dns</mat-icon>
-                                </div>
-                                <div class="col" style="display: flex; align-items: center;"
-                                    [style.background-color]="show.viewtype==2?'#FFE5B4':'#FFFFFF'" mat-raised-button
-                                    matTooltip="แสดงรายพนักงานขับรถ" (click)="show.viewtype=2">
-                                    <mat-icon style="width: 100%; color: blue;">list</mat-icon>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-        </div>
-    </div>
-
-
-    <div *ngIf="show.viewtype==1">
-        <div class="row" style="width:100vw;">
-            <!-- Left Column -->
-            <div class="col-4" style="height: 70vh; width:40hw; overflow: scroll;">
-                <div *ngFor="let item of maindata">
-                    <div class="row">
-                        <div class="container"
-                            style="display: flex; justify-content: space-between; align-items: start; width:100hw; margin: 5px;">
-                            <div class="col ms-2" style="display:flexbox; text-align: start;">
-                                <!-- setitem 1-->
-                            </div>
-    
-                            <div class="col" style="display:flexbox; text-align: start;">
-                                <!-- setitem 2-->
-                            </div>
-                        </div>
-                    </div>
-    
-    
-                </div>
-            </div>
-    
-            <!-- Righ Column -->
-            <div class="col-8" style="height: 70vh; width:60hw;">
-                
-            </div>
-        </div>
-    </div>
-
-</div>
-
-<ng-template #compdetailmodal let-modal>
-    <app-employeepage [modal]="modal" [activedata]="activedata" (talk)="companytalkback($event)"></app-employeepage>
-</ng-template>
